@@ -2002,6 +2002,48 @@ name|writesEnabled
 init|=
 literal|true
 decl_stmt|;
+comment|// Set if region is read-only
+specifier|private
+specifier|volatile
+name|boolean
+name|readOnly
+init|=
+literal|false
+decl_stmt|;
+comment|/**      * Set flags that make this region read-only.      */
+specifier|synchronized
+name|void
+name|setReadOnly
+parameter_list|(
+specifier|final
+name|boolean
+name|onOff
+parameter_list|)
+block|{
+name|this
+operator|.
+name|writesEnabled
+operator|=
+operator|!
+name|onOff
+expr_stmt|;
+name|this
+operator|.
+name|readOnly
+operator|=
+name|onOff
+expr_stmt|;
+block|}
+name|boolean
+name|isReadOnly
+parameter_list|()
+block|{
+return|return
+name|this
+operator|.
+name|readOnly
+return|;
+block|}
 block|}
 specifier|private
 specifier|volatile
@@ -2622,6 +2664,7 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
+comment|// See if region is meant to run read-only.
 if|if
 condition|(
 name|this
@@ -2634,14 +2677,17 @@ operator|.
 name|isReadOnly
 argument_list|()
 condition|)
+block|{
 name|this
 operator|.
 name|writestate
 operator|.
-name|writesEnabled
-operator|=
-literal|false
+name|setReadOnly
+argument_list|(
+literal|true
+argument_list|)
 expr_stmt|;
+block|}
 comment|// HRegion is ready to go!
 name|this
 operator|.
@@ -5609,24 +5655,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-operator|!
-name|this
-operator|.
-name|writestate
-operator|.
-name|writesEnabled
-condition|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"region is read only"
-argument_list|)
-throw|;
-block|}
+name|checkReadOnly
+argument_list|()
+expr_stmt|;
 comment|// Do a rough check that we have resources to accept a write.  The check is
 comment|// 'rough' in that between the resource check and the call to obtain a
 comment|// read lock, resources may run out.  For now, the thought is that this
@@ -6098,24 +6129,9 @@ argument_list|(
 name|column
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|this
-operator|.
-name|writestate
-operator|.
-name|writesEnabled
-condition|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"region is read only"
-argument_list|)
-throw|;
-block|}
+name|checkReadOnly
+argument_list|()
+expr_stmt|;
 name|Integer
 name|lid
 init|=
@@ -6164,24 +6180,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-operator|!
-name|this
-operator|.
-name|writestate
-operator|.
-name|writesEnabled
-condition|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"region is read only"
-argument_list|)
-throw|;
-block|}
+name|checkReadOnly
+argument_list|()
+expr_stmt|;
 name|Integer
 name|lid
 init|=
@@ -6301,24 +6302,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-operator|!
-name|this
-operator|.
-name|writestate
-operator|.
-name|writesEnabled
-condition|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"region is read only"
-argument_list|)
-throw|;
-block|}
+name|checkReadOnly
+argument_list|()
+expr_stmt|;
 name|Integer
 name|lid
 init|=
@@ -6444,24 +6430,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-operator|!
-name|this
-operator|.
-name|writestate
-operator|.
-name|writesEnabled
-condition|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"region is read only"
-argument_list|)
-throw|;
-block|}
+name|checkReadOnly
+argument_list|()
+expr_stmt|;
 name|HStoreKey
 name|origin
 init|=
@@ -6547,6 +6518,33 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|/**    * @throws IOException Throws exception if region is in read-only mode.    */
+specifier|protected
+name|void
+name|checkReadOnly
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|writestate
+operator|.
+name|isReadOnly
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"region is read only"
+argument_list|)
+throw|;
+block|}
+block|}
 comment|/**    * Private implementation.    *     * localput() is used for both puts and deletes. We just place the values    * into a per-row pending area, until a commit() or abort() call is received.    * (Or until the user's write-lock expires.)    *     * @param lockid    * @param key     * @param val Value to enter into cell    * @throws IOException    */
 specifier|private
 name|void
@@ -6576,24 +6574,9 @@ name|getColumn
 argument_list|()
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|this
-operator|.
-name|writestate
-operator|.
-name|writesEnabled
-condition|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"region is read only"
-argument_list|)
-throw|;
-block|}
+name|checkReadOnly
+argument_list|()
+expr_stmt|;
 name|TreeMap
 argument_list|<
 name|HStoreKey
@@ -6687,24 +6670,9 @@ condition|)
 block|{
 return|return;
 block|}
-if|if
-condition|(
-operator|!
-name|this
-operator|.
-name|writestate
-operator|.
-name|writesEnabled
-condition|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"region is read only"
-argument_list|)
-throw|;
-block|}
+name|checkReadOnly
+argument_list|()
+expr_stmt|;
 name|boolean
 name|flush
 init|=
